--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -6,6 +6,7 @@ spec:
   ports:
   - port: 80
     targetPort: 80
+    nodePort: 30008
   selector:
     app: guestbook-ui
-  type: ClusterIP
+  type: NodePort
